# docs/swagger.yaml
@@ -52,12 +52,21 @@ definitions:
     - name
     - user_id
     type: object
+  dto.TransactionCreateDTO:
+    properties:
+      amount:
+        type: number
+      category_id:
+        type: string
+      label:
+        type: string
+    type: object
   dto.TransactionDTO:
     properties:
       amount:
         type: number
       category_id:
-        type: integer
+        type: string
       created_at:
         type: string
       deleted_at:
@@ -67,7 +76,7 @@ definitions:
       label:
         type: string
       note_id:
-        type: integer
+        type: string
       timestamp:
         type: string
       updated_at:
@@ -152,7 +161,7 @@ definitions:
       category:
         $ref: '#/definitions/models.Category'
       category_id:
-        type: integer
+        type: string
       created_at:
         type: string
       deleted_at:
@@ -164,7 +173,7 @@ definitions:
       note:
         $ref: '#/definitions/models.Note'
       note_id:
-        type: integer
+        type: string
       timestamp:
         type: string
       updated_at:
@@ -260,40 +269,6 @@ paths:
       summary: Add a note
       tags:
       - notes
-  /notes/:note_id/transactions:
-    get:
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Transaction'
-            type: array
-      security:
-      - BearerAuth: []
-      summary: List transactions
-      tags:
-      - transactions
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: transaction
-        in: body
-        name: transaction
-        required: true
-        schema:
-          $ref: '#/definitions/dto.TransactionDTO'
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.Transaction'
-      security:
-      - BearerAuth: []
-      summary: Add a transaction
-      tags:
-      - transactions
   /notes/{note_id}:
     get:
       parameters:
@@ -410,6 +385,76 @@ paths:
       summary: Set budget for a category
       tags:
       - categories
+  /notes/{note_id}/transactions:
+    get:
+      parameters:
+      - description: Note ID
+        in: path
+        name: note_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.TransactionDTO'
+            type: array
+      security:
+      - BearerAuth: []
+      summary: List transactions
+      tags:
+      - transactions
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Note ID
+        in: path
+        name: note_id
+        required: true
+        type: string
+      - description: transaction
+        in: body
+        name: transaction
+        required: true
+        schema:
+          $ref: '#/definitions/dto.TransactionCreateDTO'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.TransactionDTO'
+      security:
+      - BearerAuth: []
+      summary: Add a transaction
+      tags:
+      - transactions
+  /notes/{note_id}/transactions/{transaction_id}:
+    get:
+      parameters:
+      - description: Note ID
+        in: path
+        name: note_id
+        required: true
+        type: string
+      - description: Transaction ID
+        in: path
+        name: transaction_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.TransactionDTO'
+            type: array
+      security:
+      - BearerAuth: []
+      summary: Get transaction detail
+      tags:
+      - transactions
   /users:
     get:
       responses:
